fixed categories not showing and added style for statement section

--- a/app/assets/stylesheets/home_statement.scss
+++ b/app/assets/stylesheets/home_statement.scss
@@ -33,3 +33,9 @@
    line-height: 72px;
    margin: 0.5em 2em;
 }
+
+.home-statement-txt-clear{
+   color: transparent;
+   -webkit-text-stroke-width: .1rem;
+   -webkit-text-stroke-color: #000;
+}
